--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 body {
-  font-family: 'Helvetica', Helvetica, Arial, sans-serif; }
+  font-family: 'Helvetica', Helvetica, Arial, sans-serif;
+  line-height: 1.4;
+  font-size: 14px; }
 
 .container {
   width: 940px;
   padding: 0 20px;
   margin: 0 auto; }
 
-#basic-injection .icon, #modified-injection .icon, #rewriting-injection .icon {
+#basic-injection .icon, #multiple-svg-injection .icon, #modified-injection .icon, #rewriting-injection .icon {
   float: left;
   width: 132px;
   padding: 140px 20px 10px 20px;
@@ -18,10 +20,22 @@ body {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
   margin: 10px;
   font-size: 12px; }
-#basic-injection .icon:first-child, #basic-injection .icon:nth-child(5n+1), #modified-injection .icon:first-child, #modified-injection .icon:nth-child(5n+1), #rewriting-injection .icon:first-child, #rewriting-injection .icon:nth-child(5n+1) {
+#basic-injection .icon:first-child, #basic-injection .icon:nth-child(5n+1), #multiple-svg-injection .icon:first-child, #multiple-svg-injection .icon:nth-child(5n+1), #modified-injection .icon:first-child, #modified-injection .icon:nth-child(5n+1), #rewriting-injection .icon:first-child, #rewriting-injection .icon:nth-child(5n+1) {
   margin-left: 0; }
-#basic-injection .icon:nth-child(5n), #modified-injection .icon:nth-child(5n), #rewriting-injection .icon:nth-child(5n) {
+#basic-injection .icon:nth-child(5n), #multiple-svg-injection .icon:nth-child(5n), #modified-injection .icon:nth-child(5n), #rewriting-injection .icon:nth-child(5n) {
   margin-right: 0; }
+#basic-injection .icon-mail.icon-spin.icon-wrench, #multiple-svg-injection .icon-mail.icon-spin.icon-wrench, #modified-injection .icon-mail.icon-spin.icon-wrench, #rewriting-injection .icon-mail.icon-spin.icon-wrench {
+  background-size: 25%, 25%, 25%;
+  background-position: 15% 65%, 50% 15%, 85% 65%; }
+
+pre {
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -o-pre-wrap;
+  background: #fafafa;
+  border-left: 10px solid #efefef;
+  padding: 20px;
+  margin: 10px 0; }
 
 /**
  * For modern browsers
