Fixes to demo for Firefox

--- a/index.jade
+++ b/index.jade
@@ -83,7 +83,7 @@ html
 					a.button(onclick="icnzr.rewriteRule('icon-paperclip', '#'+Math.floor(Math.random()*16777215).toString(16))") Change the colors
  
 				h3 Multiple SVGs in Background
-				span The original SVG in the footer is black, but additional rules were created at load time.
+				a(href="https://developer.mozilla.org/en-US/docs/CSS/Multiple_backgrounds") multiple backgrounds
 				#multiple-svg-injection.cf
 					.icon.icon-mail.icon-spin.icon-wrench 
 						span.label Mail, Spin &amp; Wrench
