--- a/style.scss
+++ b/style.scss
@@ -10,7 +10,17 @@ body {
 	margin:0 auto;
 }
 
-#basic-injection, #multiple-svg-injection, #modified-injection, #rewriting-injection {
+.section {
+	border-top:1px solid #efefef;
+	margin:20px 0;
+	padding:20px 0;
+}
+
+.sub-section {
+	margin:30px 0;
+}
+
+#basic-injection, #multiple-svg-injection, #runtime-injection, #modified-injection {
 	.icon {
 		float:left;
 		width:132px;
@@ -23,6 +33,12 @@ body {
 		box-shadow:0 0 20px rgba(0,0,0,.2);
 		margin:10px;
 		font-size:12px;
+		-webkit-touch-callout: none;
+		-webkit-user-select: none;
+		-khtml-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
+		user-select: none;
 	}
 	.icon:first-child, .icon:nth-child(5n+1) {
 		margin-left:0;
@@ -36,6 +52,10 @@ body {
 	}
 }
 
+p.large {
+	font-size:16px;
+}
+
 pre {
  white-space: pre-wrap;
  white-space: -moz-pre-wrap;
@@ -44,6 +64,12 @@ pre {
  border-left:10px solid #efefef;
  padding:20px;
  margin:10px 0;
+}
+
+dl {
+	dt {
+		font-weight:bold;
+	}
 }
 
 /**
