--- a/index.jade
+++ b/index.jade
@@ -11,6 +11,8 @@ html
 				
 			#demo.section
 				h2 Demo
+				p
+					strong Note: All code is unoptimized and proof of concept. The demos are intended to communicate the method rather than the implementation.
 				.sub-section
 					h3 Basic SVG CSS Injection
 					p Look at the original HTML/CSS source - there's no reference to these background images. The SVG injection only adds the background image&mdash;all other CSS rules still need to be created manually.
